--- a/style.css
+++ b/style.css
@@ -1,60 +1,120 @@
-body {
-    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-    font-family: 'Poppins', sans-serif;
-}
+body{
+    padding-top: 20px;
+    padding-bottom: 20px;
 
-#form {
-    width: 300px;
-    margin: 20vh auto 0 auto;
-    padding: 20px;
-    background-color: whitesmoke;
-    border-radius: 4px;
-    font-size: 12px;
-}
-
-#form h1 {
-    color: #0f2027;
-    text-align: center;
-}
-
-#form button {
+  }
+  .card{
+    margin:0 15% 0;
+    width:70%;
+    background-color: #ffffff;
+  }
+  label {
+    display: block;
+  }
+  
+  input {
+    display: block;
+  }
+  
+  .form-step {
+    display: none;
+  }
+  
+  .form-step-active {
+    display: block;
     padding: 10px;
-    margin-top: 10px;
-    width: 100%;
-    color: white;
-    background-color: rgb(41, 57, 194);
-    border: none;
-    border-radius: 4px;
-}
+    background-color:#ffffff ;
+    border-radius: 5px;
+  }
+  .main-body{
+    background-color: #ffffff;
+    border-radius: 5px;
+    margin: 2px;
+  }
+  .form-header{
+    margin: 10px 0 10px;
+  }
+  .form-input{
+    width:200px;
+    border-radius: 5px;
+    border: 1px solid rgb(0, 0, 0);
+    height: 30px;
+  }
+  .form-select{
+    width: 200px;
+    border-radius: 5px;
+    border: 1px black solid;
+    text-align: center;
+  }
+  textarea{
+    resize: none;
+  }
+  .width-50{
+    width:100px;
+  }
+  .btn{
+    background-color: white;
+  }
+  .error-message{
+    color: red;
+  }
+  .required{
+    color: black;
+  }
 
-.input-control {
-    display: flex;
-    flex-direction: column;
-}
-
-.input-control input {
-    border: 2px solid #f0f0f0;
-  border-radius: 4px;
-  display: block;
-  font-size: 12px;
-  padding: 10px;
-  width: 100%;
-}
-
-.input-control input:focus {
-    outline: 0;
-}
-
-.input-control.success input {
-    border-color: #09c372;
-}
-
-.input-control.error input {
-    border-color: #ff3860;
-}
-
-.input-control .error {
-    color: #ff3860;
-    font-size: 9px;
-    height: 13px
-}
+  .disable-ancor{
+    pointer-events: none;
+    cursor: default;
+  }
+  .btn-right{
+    float: right;
+  }
+  .btn-left{
+    float: left;
+  }
+  .nav-btn{
+    margin:10px;
+    width: 100px;
+    height: 40px;
+    margin:0 10px 0; 
+  }
+  .color-change{
+    border: 1px solid black;
+  }
+  .bar{
+    position: relative;
+    display:flex;
+    justify-content: space-between;
+    width: 75%;
+    margin: 15px auto 15px;
+    border-radius: 50%;
+  }
+  .bar::before{
+    content: "";
+    position: absolute;
+    top:50%;
+    height: 4px;
+    width:100%;
+    background-color: rgb(51, 120, 169);
+    border-radius: 50px;
+  }
+  .inner-bar{
+    width:8px;
+    height: 8px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    margin: 3.5px;
+  }
+  .bar-step{
+    top: 2px;
+    position: relative;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+  }
+  .bar-inactive{
+    background-color: rgb(121, 121, 121);
+  }
+  .bar-active{
+    background-color: rgba(219,70,107,255);
+  }
